# KapProfiler

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: linter.yml  release.yml
src/: GlobImpl.cpp  GlobImpl.hpp  KapProfilerMain.cpp  StackSummary.hpp  Viewer.cpp  Viewer.hpp  imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.hpp
src/Graphical/: imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.hpp
src/Stack/: StackElement.cpp  StackElement.hpp
